--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
     <title>My WebPage!</title>
   </head>
   <body>
-    Hello World! Hello Again! Hello Hello Hello!
+    Hello World!
   </body>
 </html>
